added projects about and page

--- a/app/about.html
+++ b/app/about.html
@@ -42,16 +42,9 @@
       <div class="columns large-12 project-title">
         <div class="row">
           <div class="columns large-offset-1 large-9">
-            <h1>Owwl</h1>
-            <h2>Helping 42 public libraries reach their full potential</h2>
+            <h1>Design & Development</h1>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12 project-img-wide">
-        <img src="images/pioneer1.jpg">
       </div>
     </div>
        
@@ -139,7 +132,7 @@
         <h1><a>Net Impact</a></h1>
       </div>
       <div class="columns large-5 end">
-        <h1><a href="/page.html">Owwl</a></h1>
+        <h1><a href="http://page.html">Owwl</a></h1>
       </div>
     </div>
 
@@ -179,6 +172,11 @@
         <h5>Design & Development<h5>
       </div>
     </div>
+
+
+
+
+
     <!-- build:js js/vendor/libraries.min.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
