--- a/app/page.html
+++ b/app/page.html
@@ -39,13 +39,9 @@
     </div>
     
     <div class="row">
-      <div class="columns large-12 project-title">
-        <div class="row">
-          <div class="columns large-offset-1 large-9">
-            <h1>Viriginia Law Review</h1>
-            <h2>Helping 42 public libraries reach their full potential</h2>
-          </div>
-        </div>
+      <div class="columns large-offset-1 large-9 page-title">
+        <h1>Viriginia Law Review</h1>
+        <h2>Helping 42 public libraries reach their full potential</h2>
       </div>
     </div>
 
