updated about page and sass file styles

--- a/app/page.html
+++ b/app/page.html
@@ -97,7 +97,7 @@
     </div>
     <hr>
 
-    <div class="row more-work">
+    <div class="row more-padding">
       <div class="columns large-offset-2 large-10">
         <h5>More work</h5>
       </div>
