--- a/app/about.html
+++ b/app/about.html
@@ -24,11 +24,13 @@
     
     <div class="row">
       <div class="columns large-offset-2 large-10">
-        <div class="columns large-6">
-          <p class="wordmark"><a href="/index.html">Albatross Digital</a></p>
-        </div>
-        <div class="columns large-6">
-          <p class="navigate"><a href="/index.html">Navigate</a></p>  
+        <div class="row">
+          <div class="columns large-6">
+            <h4 class="wordmark"><a href="/index.html">Albatross Digital</a></h4>
+          </div>
+          <div class="columns large-6">
+            <p class="navigate"><a href="/index.html">Navigate</a></p>  
+          </div>
         </div>
        
         <div class="row">
@@ -49,7 +51,7 @@
             <h3>Approach</h3>
             <div class="row">
               <div class="columns small-2 large-2">
-                <h1>01</h1>
+                <h1>1</h1>
               </div>
               <div class="columns small-10 large-10">
                 <h1>Create Clarity</h1>
@@ -58,7 +60,7 @@
 
             <div class="row">
               <div class="columns small-2 large-2">
-                <h1>02</h1>
+                <h1>2</h1>
               </div>
               <div class="columns small-10 large-10">
                 <h1>Design Systems</h1>
@@ -67,7 +69,7 @@
 
             <div class="row">
               <div class="columns small-2 large-2">
-                <h1>03</h1>
+                <h1>3</h1>
               </div>
               <div class="columns small-10 large-10">
                 <h1>Build for All</h1>
@@ -76,7 +78,7 @@
 
             <div class="row">
               <div class="columns small-2 large-2">
-                <h1>04</h1>
+                <h1>4</h1>
               </div>
               <div class="columns small-10 large-10">
                 <h1>Always Learn</h1>
