updated about and page and added some more files

--- a/app/page.html
+++ b/app/page.html
@@ -43,34 +43,13 @@
 
     <div class="row">
       <div class="columns large-12 project-img-wide">
-        <img src="images/pioneer1.jpg">
+        <img src="images/uva1.jpg">
       </div>
     </div>
          
     <div class="row">
-      <div class="columns large-8 body-content">
+      <div class="columns large-8 large-padding">
         <h3>For over one hundred years, the Virginia Law Review has been one of the most prestigious publications of the legal profession. In 2013, they challenged us to build a new digital home for their vast collection of scholarly notes and articles.</h3>
-        <div class="row tags">
-          <div class="columns small-2 large-2">
-            <h4>Tags</h4>
-          </div>
-          <div class="columns small-10 large-10">
-            <ul class="inline-list">
-              <li><h4><a href="#">Library</a></h4></li>
-              <li><h4><a href="#">Identity</a></h4></li>
-              <li><h4><a href="#">Design & Development</a></h4></li>
-            </ul>
-          </div>
-          <div class="columns small-2 large-2">
-            <h4>Visit</h4>
-          </div>
-          <div class="columns small-10 large-10">
-            <ul class="inline-list">
-              <li><h4><a href="#">Owwl.org</a></h4></li>
-              <li><h4><a href="#">pls-net.org</a></h4></li>
-            </ul>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -85,7 +64,7 @@
         <img src="images/pioneer3.jpg">
       </div>
       <div class="columns large-6 body-content">
-        <h3>Visual Design</h3>
+       <h4>Visual Design</h4>
         <p>Inspired by print editions of the Review, we created a design rooted in typography. Users can easily view the latest volume or navigate through the archives to find interesting takes from students and professionals. Our print edition theme reflects the tradition and character of the organization, and the functionality behind it positions the Law Review as a leader in its field.</p>
       </div>
     </div>
@@ -97,18 +76,29 @@
     </div>
 
     <div class="row">
-      <div class="columns large-6 project-img">
-        <img src="images/pioneer3.jpg">
-      </div>
-      <div class="columns large-6 body-content">
-        <h3>Visual Design</h3>
-        <p>Inspired by print editions of the Review, we created a design rooted in typography. Users can easily view the latest volume or navigate through the archives to find interesting takes from students and professionals. Our print edition theme reflects the tradition and character of the organization, and the functionality behind it positions the Law Review as a leader in its field.</p>
+      <div class="columns large-12 project-img-wide">
+        <img src="images/pioneer4.jpg">
       </div>
     </div>
 
-    <div class="row">
-      <div class="columns large-12 project-img-wide">
-        <img src="images/pioneer4.jpg">
+    <div class="row large-padding">
+      <div class="columns small-12 large-6">
+        <div class="row small-padding">
+          <div class="columns small-12 large-4">
+            <h5>Strategy</h5>
+          </div>
+          <div class="columns small-12 large-8">
+            <p>Concept, Naming, Content Modelling, Information Architecture, Copywriting</p>
+          </div>
+        </div>
+        <div class="row small-padding">
+          <div class="columns small-12 large-4">
+            <h5>Strategy</h5>
+          </div>
+          <div class="columns small-12 large-8">
+            <p>Concept, Naming, Content Modelling, Information Architecture, Copywriting</p>
+          </div>
+        </div>
       </div>
     </div>
 
