adding about and index

--- a/app/projects.html
+++ b/app/projects.html
@@ -48,7 +48,7 @@
       </div>
        <div class="columns medium-6 large-6">
         <img class="project-img" src="images/pioneer1.jpg">
-        <h3 class="caption-large"><a href="#">Virginia Law Review</a></h3>
+        <h3 class="caption-large"><a href="#">ConnectU</a></h3>
       </div>
     </div>
      
