--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 
     <div class="row">
       <div class="columns medium-6 large-6 body-content">
-        <h3>Albatross Digital is an independent design and development company. We build websites, design visual identities and solve problems for clients big and small.</h3>
+        <h3>Albatross Digital is an independent design and development company. We help leading organizations use design and technology to achieve their visions.</h3>
       </div>
       <div class="columns medium-6 large-6">
         <img class="project-img" src="images/pioneer3.jpg">
