updated some copy language

--- a/app/about.html
+++ b/app/about.html
@@ -36,7 +36,7 @@
          
     <div class="row">
       <div class="columns medium-12 large-8 medium-padding">
-        <h3>Albatross Digital is an independent design and development company. We help organizations, institutions and entrepreneurs use design and technology to acheive their visions.</h3>
+        <h3>Albatross Digital is an independent design and development company. We help organizations, institutions and entrepreneurs acheive their visions through design and technology.</h3>
       </div>
     </div>
 
@@ -96,7 +96,7 @@
             <h5>Strategy</h5>
           </div>
           <div class="columns small-12 large-8">
-            <p>Concept, Information Architecture, User Experience</p>
+            <p>Concept, Content, Information Architecture, User Experience</p>
           </div>
         </div>
 
@@ -105,7 +105,7 @@
             <h5>Design</h5>
           </div>
           <div class="columns small-12 large-8">
-            <p>Brand Identity, User Interface, Typography, Illustration, Print Collateral</p>
+            <p>Identity, Typography, Interface, Illustration, Print Collateral</p>
           </div>
         </div>
 
@@ -114,7 +114,7 @@
             <h5>Development</h5>
           </div>
           <div class="columns small-12 large-8">
-            <p>Front-end, Back-end, Content Management Systems, Web and Mobile Apps</p>
+            <p>Prototype, Front-end, Back-end, Content Management, Web &amp; Mobile Apps</p>
           </div>
         </div>
       </div>
@@ -165,8 +165,8 @@
             <img src="images/tross1.jpg">
           </div>
           <div class="columns large-6">
-            <h5>Why the name Albatross?</h5>
-            <p>We get this question a lot. The fact of the matter is, the albatross caught a bad rep. These magnficient birds have the largest wingspan of any living species, measuring up to 12 feet wide. By utilizing a technique called <a>dynamic soaring</a>, an albatross can fly over 9,000 miles without touching land. These birds literally span the globe, which is a nice metaphor for a digital design company if you ask us.</p>
+            <p>The Albatross has the largest wingspan of any species on earth, measuring up to 11 feet wide. By utizing a flying technique known as <a>dynamic soaring</a>, an albatross can fly 9,000 miles without touching land. These seabirds literally span the globe, which is a nice metaphor for a digital agency if you ask us.</p>
+            <p>If you'd like to learn more about Albatross (us, or the bird) please <a>contact us</a>.
           </div>
         </div>
       </div>
