added contact page and sign image

--- a/app/about.html
+++ b/app/about.html
@@ -24,7 +24,7 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu">Menu +</h3>
+        <h3 class="right menu"><a>Menu +</a></h3>
       </div>
     </div>
 
@@ -49,10 +49,10 @@
             <img src="images/insta2.jpg">
           </div>
           <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta1.jpg">
+            <img src="images/insta3.jpg">
           </div>
           <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta3.jpg">
+            <img src="images/insta1.jpg">
           </div>
           <div class="columns medium-6 large-3">
             <img src="images/insta4.jpg">
@@ -120,6 +120,83 @@
       </div>
     </div>
 
+    <div class="row medium-padding">
+      <div class="columns large-12">
+
+        <div class="row">
+          <div class="columns large-12 small-padding">
+            <h4>Team</h4>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns large-6">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-4">
+                  <img src="images/kevin.png">
+                </div>
+                <div class="columns large-8">
+                  <h3 class="no-margin">Kevin Herman</h3>
+                  <h5>Business Director</h5>
+                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p><a>Notes</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="columns large-6">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-4">
+                  <img src="images/kevin.png">
+                </div>
+                <div class="columns large-8">
+                  <h3 class="no-margin">Jeff Lyon</h3>
+                  <h5>Developer</h5>
+                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p><a>Notes</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="columns large-6">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-4">
+                  <img src="images/kevin.png">
+                </div>
+                <div class="columns large-8">
+                  <h3 class="no-margin">Shawn Maloney</h3>
+                  <h5>Designer</h5>
+                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p><a>Notes</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="columns large-6">
+            <div class="note-teaser">
+              <div class="row">
+                <div class="columns large-4">
+                  <img src="images/kevin.png">
+                </div>
+                <div class="columns large-8">
+                  <h3 class="no-margin">Alex Schmoe</h3>
+                  <h5>Developer</h5>
+                  <p>It aims to take care of the mundane and frustrating tasks in every site build: downloading modules</p>
+                  <p><a>Notes</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <div class="row medium-padding">
       <div class="columns large-12">
@@ -166,7 +243,7 @@
           </div>
           <div class="columns large-6">
             <p>The Albatross has the largest wingspan of any species on earth, measuring up to 11 feet wide. By utizing a flying technique known as <a>dynamic soaring</a>, an albatross can fly 9,000 miles without touching land. These seabirds literally span the globe, which is a nice metaphor for a digital agency if you ask us.</p>
-            <p>If you'd like to learn more about Albatross (us, or the bird) please <a>contact us</a>.
+            <p>If you'd like to learn more about Albatross (us, or the bird) please <a>get in touch</a>.
           </div>
         </div>
       </div>
