--- a/app/projects.html
+++ b/app/projects.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu">Menu +</h3>
+        <h3 class="right menu"><a>Menu +</a></h3>
       </div>
     </div>
 
@@ -47,74 +47,93 @@
         <h3 class="caption-large"><a href="#">Baltimore</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/tacoma7.png">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Blue Guide</a></h3>
       </div>
     </div>
      
     <div class="row">
       <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/balti1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">CoveredU</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/tacoma7.png">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Charities.org</a></h3>
       </div>
     </div>
 
     <div class="row">
       <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">DC Library</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Logos & Marks</a></h3>
       </div>
     </div>
 
     <div class="row">
       <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Net Impact</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Owwl.org</a></h3>
       </div>
     </div>
 
     <div class="row">
       <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/tacoma-thumb.png">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Port of Tacoma</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Rockcorps</a></h3>
       </div>
     </div>
 
     <div class="row">
       <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">STEMZone</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">UC Davis</a></h3>
       </div>
     </div>
 
     <div class="row">
       <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Virginia Law Review</a></h3>
       </div>
        <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/pioneer1.jpg">
+        <img class="project-img" src="images/balt-thumb.png">
         <h3 class="caption-large"><a href="#">Worst Landlords</a></h3>
+      </div>
+    </div>
+
+    <div class="row footer">
+
+      <div class="columns small-12 medium-6 large-6">
+        <p>Albatross Digital<br>Design &amp; Development</p>
+      </div>
+
+      <div class="columns small-12 medium-6 large-6">
+
+        <div class="row">
+          <div class="columns small-12 large-4">
+            <h5>Contact</h5>
+          </div>
+          <div class="columns small-12 large-8">
+            <p>(917) 873 4666<br><a>hello@albatrossdigital.com</a></p>
+          </div>
+        </div>
       </div>
     </div>
 
