--- a/app/page.html
+++ b/app/page.html
@@ -26,7 +26,7 @@
         <a href="#"><img class="logo" src="images/logo-uva.svg"></a>
       </div>
       <div class="columns small-8 large-6">
-        <h3 class="right menu">Menu +</h3>
+        <h3 class="right menu"><a>Menu +</a></h3>
       </div>
     </div>
 
@@ -79,7 +79,7 @@
 
 
     <div class="row large-padding">
-      <div class="columns medium-12 large-offset-6 large-6">
+      <div class="columns medium-12 large-6">
 
         <div class="row">
           <div class="columns small-12 medium-3 large-4">
@@ -114,19 +114,21 @@
       <div class="columns large-12">
       
         <div class="row">
-          <div class="columns large-12 medium-padding">
-            <h3>All Projects<h3>
+          <div class="columns large-12">
+            <div class="all-teaser">
+                <h3><a>&ndash; All Projects</a></h3>
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="columns small-12 medium-6 large-6">
-            <img class="project-img" src="images/covered1.jpg">
+            <img class="project-img" src="images/balt-thumb.png">
             <h3 class="caption-large"><a href="#">Previous</a></h3>
           </div>
 
           <div class="columns medium-6 large-6">
-            <img class="project-img" src="images/pioneer1.jpg">
+            <img class="project-img" src="images/balt-thumb.png">
             <h3 class="caption-large"><a href="#">Next</a></h3>
           </div>
         </div>
