tweaks to html files and sass

--- a/app/contact.html
+++ b/app/contact.html
@@ -37,92 +37,54 @@
     </div>
 
 
-    <div class="row">
-      <div class="columns medium-6 large-6">
+    <div class="row small-padding">
+      <div class="columns large-4">
 
         <div class="row">
           <div class="columns large-12">
-            <h4>General Business</h4>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-12 medium-padding">
-            <p><a>hello@albatrossdigital.com</a></p>
+            <div class="note-teaser">
+              <h3>General Business</h3>
+              <p><a>contact@albatrossdigital.com</a></p>
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="columns large-12">
-            <h4>Project Inquiries</h4>
+            <div class="note-teaser">
+              <h3>Project Inquiries</h3>
+              <p><a>kevin@albatrossdigital.com</a></p>
+            </div>
           </div>
         </div>
 
         <div class="row">
-          <div class="columns large-12 medium-padding">
-            <p><a>kevin@albatrossdigital.com</a></p>
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <h3>AD East</h3>
+              <p><a>155 Water Street<br>Brooklyn, NY 11201</a><br><a>(917) 873 4666</a></p>
+            </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="columns large-12">
+            <div class="note-teaser">
+              <h3>AD West</h3>
+              <p><a>101 Broadway<br>Suite 305<br>Oakland, CA 94607</a></p>
+            </div>
+          </div>
+        </div>
+
       </div>
-
-      <div class="columns medium-6 large-6">
-
-        <div class="row">
-          <div class="columns small-12 large-4">
-            <h5>Albatross East</h5>
-          </div>
-          <div class="columns small-12 large-8">
-            <p>155 Water Street<br>Brooklyn, NY 11201<br>(917) 873 4666<br><a>Map it</a></p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns small-12 large-4">
-            <h5>Albatross West</h5>
-          </div>
-          <div class="columns small-12 large-8">
-            <p>101 Broadway<br>Suite 305<br>Oakland, CA 94607<br><a>Map it</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-        <div class="row">
-          <div class="columns large-12 medium-padding">
-            <h4>ELSEWHERE</h4>
-            <p><a>Twitter<br>Instagram<br>Facebook</a></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="columns medium-6 large-9">
+      <div class="columns large-8">
 
         <div class="row">
           <div class="columns large-12">
             <img src="images/sign.jpg">
           </div>
         </div>
-      </div>
-    </div>
 
-
-  
-    <div class="row footer">
-
-      <div class="columns small-12 medium-6 large-6">
-        <p>Albatross Digital<br>Design &amp; Development</p>
-      </div>
-
-      <div class="columns small-12 medium-6 large-6">
-
-        <div class="row">
-          <div class="columns small-12 large-4">
-            <h5>Contact</h5>
-          </div>
-          <div class="columns small-12 large-8">
-            <p>(917) 873 4666<br><a>hello@albatrossdigital.com</a></p>
-          </div>
-        </div>
       </div>
     </div>
 
