--- a/app/note.html
+++ b/app/note.html
@@ -98,7 +98,7 @@
         <div class="row">
             <div class="columns large-12">
                 <div class="all-teaser">
-                    <h3><a>&ndash; All Notes</a></h3>
+                    <h3><a>All Notes</a></h3>
                 </div>
             </div>
         </div>
@@ -108,9 +108,9 @@
             <div class="note-teaser">
                 <div class="row">
                     <div class="columns large-10 end">
+                        <h5>Related<h5>
                         <h3><a>Flight for Libraries</a></h3>
                         <p>Flight for Libraries tightly integrates two leading open-source platforms, Drupal and Vufind, to create a unified digital branch for the modern web.</p>
-                        <p><a>Read note</a></p>
                     </div>
                 </div>
             </div>
@@ -120,9 +120,9 @@
             <div class="note-teaser">
                 <div class="row">
                     <div class="columns large-10 end">
+                        <h5>Related<h5>
                         <h3><a>Drupal 8, Rest APIs, Angular, and a New Wesbite in 3 days</a></h3>
                         <p>With Drupalcon fast approaching, we had an oh s**t moment and realized it was time to make our website.  Here's how we made it happen in Drupal 8 with Angular.js. Along the way we got a good impression of Drupal 8 alpha 12, messed around with some fun ui chaos and had some fun. Here we go.</p>
-                        <p><a>Read note</a></p>
                     </div>
                 </div>
             </div>
