--- a/app/notes.html
+++ b/app/notes.html
@@ -32,7 +32,7 @@
 
     <div class="row">
       <div class="columns large-12">
-        <h1 class="page-title">Notes</h1>
+        <h1>Notes</h1>
       </div>
     </div>
     <div class="row">
@@ -49,9 +49,8 @@
             <div class="note-teaser">
               <div class="row">
                 <div class="columns large-10 end">
-                  <h3><a>Flight: Our Open-Source Drupal Distribution</a></h3>
+                  <h3><a href="/about.html">Flight: Our Open-Source Drupal Distribution</a></h3>
                   <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
@@ -66,7 +65,6 @@
                   <img class="small-padding" src="images/balt-thumb.png">
                   <h3><a>Flight for Libraries</a></h3>
                   <p>Flight for Libraries tightly integrates two leading open-source platforms, Drupal and Vufind, to create a unified digital branch for the modern web.</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
@@ -80,7 +78,6 @@
                 <div class="columns large-10 end">
                   <h3><a>Flight: Our Open-Source Drupal Distribution</a></h3>
                   <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
@@ -95,7 +92,6 @@
                   <img class="small-padding" src="images/uva7.jpg">
                   <h3><a>Drupal 8, Rest APIs, Angular, and a New Wesbite in 3 days</a></h3>
                   <p>With Drupalcon fast approaching, we had an oh s**t moment and realized it was time to make our website.  Here's how we made it happen in Drupal 8 with Angular.js. Along the way we got a good impression of Drupal 8 alpha 12, messed around with some fun ui chaos and had some fun. Here we go.</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
@@ -113,7 +109,6 @@
                   <img class="small-padding" src="images/uva7.jpg">
                   <h3><a>Rebranding Albatross Digital</a></h3>
                   <p>Our designer, Shawn had been throwing around ideas for a new portfolio for quite some time.  What we ended up with was a clean design centered on our porfolio, with carefully created image for each entry.</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
@@ -127,7 +122,6 @@
                 <div class="columns large-10 end">
                   <h3><a>Flight: Our Open-Source Drupal Distribution</a></h3>
                   <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
@@ -142,7 +136,6 @@
                   <img class="small-padding" src="images/uva7.jpg">
                   <h3><a>Drupal 8, Rest APIs, Angular, and a New Wesbite in 3 days</a></h3>
                   <p>With Drupalcon fast approaching, we had an oh s**t moment and realized it was time to make our website.  Here's how we made it happen in Drupal 8 with Angular.js. Along the way we got a good impression of Drupal 8 alpha 12, messed around with some fun ui chaos and had some fun. Here we go.</p>
-                  <p><a>Read note</a></p>
                 </div>
               </div>
             </div>
