--- a/app/page.html
+++ b/app/page.html
@@ -42,8 +42,8 @@
     </div>
          
     <div class="row medium-padding">
-      <div class="columns large-8">
-        <h3>For over one hundred years, the Virginia Law Review has been one of the most prestigious publications of the legal profession. In 2013, they challenged us to build a new digital home for their vast collection of scholarly notes and articles.</h3>
+      <div class="columns large-12">
+        <p>For over one hundred years, the Virginia Law Review has been one of the most prestigious publications of the legal profession. In 2013, they challenged us to build a new digital home for their vast collection of scholarly notes and articles.</p>
       </div>
     </div>
 
