--- a/app/tacoma.html
+++ b/app/tacoma.html
@@ -35,9 +35,17 @@
         <h1 class="tacoma">Port of Tacoma</h1>
       </div>
     </div>
+
     <div class="row">
-      <div class="columns medium-10 large-8 end">
-        <h2 class="sub-title">The Ease of Doing Business</h2>
+      <div class="columns large-12">
+        <h2>The Ease of Doing Business</h2>
+      </div>
+    </div>
+    
+
+    <div class="row">
+      <div class="columns large-12 medium-padding">
+         <p>The Port of Tacoma is the third-largest port on the West Coast of the United States, and growing quickly. We were brought in to redesign the entire site and develop a host of interactive features to showcase Tacoma's many strategic advantages.</p>
       </div>
     </div>
 
@@ -46,21 +54,11 @@
         <img src="images/tacoma1.jpg">
       </div>
     </div>
+ 
 
-    <div class="row medium-padding">
-      <div class="columns large-8">
-        <h3>The Port of Tacoma is America's third-largest port on the West Coast, and growing quickly. We were brought on to overhaul the site's information architecture and create a visual design that better reflected their recent re-branding initiative.</h3>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="columns large-12 medium-padding">
-        <img src="images/tacoma2.png">
-      </div>
-    </div>
 
      <div class="row">
-      <div class="columns large-8 large-padding">
+      <div class="columns large-12 large-padding">
         <h3>Challenge</h3>
         <p>The old site had become bloated with content, which made finding information difficult for potential and current clients. The Port needed a modern, responsive website that highlighted their friendly, professional attitude and key competitve advantages.</p>
         <h3>Interactive Features</h3>
@@ -81,7 +79,7 @@
 
     <div class="row">
       <div class="columns large-12 medium-padding">
-        <img src="images/tacoma3.png">
+        <img src="images/tacoma2.png">
       </div>
     </div>
 
@@ -136,7 +134,7 @@
         <div class="row">
           <div class="columns large-12">
             <div class="all-teaser">
-                <h3><a>&ndash; All Projects</a></h3>
+                <h3><a>All Projects</a></h3>
             </div>
           </div>
         </div>
