--- a/app/index.html
+++ b/app/index.html
@@ -27,100 +27,24 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row large-padding">
       <div class="columns large-10">
-        <h1 class="wordmark">Albatross Digital</h1>
+        <h1 class="wordmark"><a>Albatross<br>Digital</a></h1>
       </div>
     </div>
 
     <div class="row">
       <div class="columns medium-12 large-10">
-        <h2>We build websites, design identities and solve problems<br>&mdash;</h2>
+        <p>Project</p>
       </div>
     </div>
-
 
     <div class="row">
-      <div class="columns medium-6 large-6">
-        <img class="project-img" src="images/balt-thumb.png">
-        <h3 class="caption-large"><a href="#">Baltimore</a></h3>
-      </div>
-       <div class="columns medium-6 large-6">
-          <div class="note-teaser">
-            <h3><a>Flight for Libraries</a></h3>
-            <p>Flight for Libraries tightly integrates two leading open-source platforms, Drupal and Vufind, to create a unified digital branch for the modern web.</p>
-            <p><a>Read note</a></p>
-          </div>
+      <div class="columns medium-12 large-10">
+        <h1>Project</h1>
       </div>
     </div>
 
-    <div class="row medium-padding">
-      <div class="columns large-12">
-        <div class="row">
-          <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta2.jpg">
-          </div>
-          <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta1.jpg">
-          </div>
-          <div class="columns medium-6 large-3 small-padding">
-            <h3><a>Flight for Libraries</a></h3>
-            <p>Flight for Libraries tightly integrates two leading open-source platforms, Drupal and Vufind, to create a unified digital branch for the modern web.<br><a>Read note</a></p>
-          </div>
-          <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta3.jpg">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row medium-padding">
-      <div class="columns large-12">
-        <div class="row">
-          <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta2.jpg">
-          </div>
-          <div class="columns medium-6 large-3 small-padding">
-            <h3><a>Flight: Our Open-Source Drupal Distribution</a></h3>
-            <p>Flight is our turnkey Drupal Distribution.  It aims to take care of the mundane and frustrating tasks in every site build: downloading modules...<br><a>Read note</a></p>
-          </div>
-          <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta3.jpg">
-          </div>
-          <div class="columns medium-6 large-3 small-padding">
-            <img src="images/insta4.jpg">
-          </div>
-        </div>
-      </div>
-    </div>
-
-  <div class="row">
-    <div class="columns medium-6 large-6">
-      <div class="row">
-        <div class="columns large-12">
-          <div class="all-teaser">
-            <h3><a>&ndash; Projects</a></h3>
-          </div>
-          <div class="all-teaser">
-            <h3><a>&ndash; Notes</a></h3>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="columns medium-6 large-6">
-      <div class="row">
-        <div class="columns large-12">
-          <div class="all-teaser">
-            <h3><a>&ndash; About</a></h3>
-          </div>
-           <div class="all-teaser">
-            <h3><a>&ndash; Contact</a></h3>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
 
